# receipt-manager

./: .cursorrules  .gitignore  .vscode  docker-compose.production.yml  package-lock.json  package.json
.github/workflows/: deploy.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/schemas/: common.py  csv.py  memo.py  receipt.py
backend/app/services/: csv_service.py  gemini_service.py  sheets_service.py  supabase_service.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: transactApi.ts
frontend/src/components/: Auth.tsx  LoginPage.tsx  MainLayout.tsx  RegisterPage.tsx  SettingsModel.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx  NumberInput.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/features/csv/api/: csvApi.ts
frontend/src/features/csv/components/: CsvAnalysisForm.tsx  CsvEditorTable.tsx  CsvIconPicker.tsx  CsvPresetDeleteModal.tsx  CsvPresetIconModal.tsx  CsvPresetRenameModal.tsx  CsvPresetSaveModal.tsx  CsvUploader.tsx
frontend/src/features/csv/hooks/: useCsvUploader.ts
frontend/src/features/csv/types/: index.ts
frontend/src/features/csv/utils/: csvMask.ts  date.ts  emoji.ts
frontend/src/features/dashboard/components/: DashboardPage.tsx
frontend/src/features/history/api/: historyApi.ts
frontend/src/hooks/: useApiConfig.ts
frontend/src/lib/: apiClient.ts  supabase.ts
frontend/src/pages/: RegisterPage.tsx
frontend/src/types/: index.ts
nginx-config/: default.conf
(+24 files in other folders)
